--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,7 @@ jobs:
           -target=azurerm_container_app_environment.CSW_LiveStatusMonitor_Env \
           -target=azurerm_container_app.CSW_LiveStatusMonitor_App \
           -target=azurerm_container_app_custom_domain.CSW_LiveStatusMonitor_CustomDomain \
+          -target=azurerm_container_app_environment_certificate.csw_certificate \
           -var="container_image_tag=${{ github.run_id }}" \
           -var="hostname=${{ secrets.HOSTNAME }}" \
           -var="username=${{ secrets.USERNAME }}" \
